[package]
name = "pzsm"
version = "1.0.0"
edition = "2021"
authors = ["shixinhuang99 <shixinhuang99@gmail.com>"]
description = "A simple Project Zomboid saves manager desktop client"
repository = "https://github.com/shixinhuang99/pzsm"
license = "MIT"
publish = false

[[bin]]
name = "Pzsm"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.90"
chrono = "0.4.38"
dircpy = "0.3.19"
home = "0.5.9"
iced = { version = "0.13.1", features = ["tokio", "image"] }
tokio = { version = "1.40.0", features = ["rt", "rt-multi-thread", "fs"] }
trash = "5.1.1"

[build-dependencies]
winresource = "0.1.17"

[profile.release]
strip = true
lto = true
panic = "abort"
codegen-units = 1

[features]
_dev = []
